2008-07-01 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/Code.py, src/Exscript/Interpreter/Term.py: Add
	support for octal numbers using the 01234 format.
	* src/Exscript/Interpreter/stdlib/File/*.py: Add chmod() function, cleanups.

2008-06-30 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/Code.py, src/Exscript/Interpreter/Term.py: Add
	support for hex numbers by using the 0xABCD format.
	* src/Exscript/Interpreter/stdlib/Connection/auto_authorize.py: Fix a
	deadlock.
	* src/Exscript/Interpreter/stdlib/Connection/exec.py: Fixed (did not work at
	all).

2008-06-29 Samuel Abels <http://debain.org>

	* Makefile: Add an installer that pulls dependencies from the repository.
	* src/Exscript/Interpreter/Program.py,
	src/Exscript/TerminalActions/CommandScript.py: Got rid of useless reference 
	to Trackable.
	* src/Exscript/Interpreter/Trackable.py: Removed useless file.

2008-06-28 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/ExpressionNode.py: Prioritize division and
	multiplication over other arithmetic operators.
	* src/Exscript/Exscript.py, exscript: Add support for interactive variables
	by setting the variable value to a bracketed expression (such as {foo}).
	* src/Exscript/FooLib/UrlParser.py: Cleanups.
	* src/Exscript/Exscript.py: Fix Python 2.3 compatibility.
	* src/Exscript/FooLib/Interact.py: Fix: Asking a username now works when the
	USER environment variable is not set.
	* src/Exscript/Interpreter/stdlib/Connection/auto_authorize.py: Fix a
	deadlock.
	* src/Exscript/TerminalActions/LoggedSequence.py: Fix: Only create an error
	log file if an error occured. Flush logfiles regularly. Log exceptions with
	tracebacks.
	* src/Exscript/FooLib/UrlParser.py, src/Exscript/TerminalActions/Connect.py,
	src/Exscript/Exscript.py: Add support for specifying a port number using URL
	style hostnames.
	* exscript: Add the --sleep command line switch for waiting a period of time
	before running the script.