@@ -1,0 +1,22 @@
+ls -1 {extract /^(\S+)/ as filenames}
+ls -1
+{
+  extract /^(\S+)/ as filenames2
+  loop filenames,
+       filenames2 as filename,
+                     filename2
+    sys.message("Iteration: $filename/$filename2")
+  end
+  loop filenames as filename
+    if filename matches /^M/
+      msg = "Filename starts with " . "M"
+      sys.message(msg)
+      try
+}
+{try}ls -l $filename{end}
+{
+      end
+      sys.message("(which is ok)")
+    end
+}
+{end}
